--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,26 @@
 .bold {
   font-weight: bold;
 }
+
+.App button {
+  border: 1px solid black;
+  padding: 10px;
+  background: green;
+  color: white;
+  font: inherit;
+  cursor: pointer;
+}
+
+.App button:hover {
+  background: lightgreen;
+  color: black;
+}
+
+.App button.Red {
+  background: red;
+}
+
+.App button.Red:hover {
+  background: salmon;
+  color: black;
+}
